--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
     "test:e2e": "playwright test",
-    "test:e2e:ui": "playwright test --ui"
+    "test:e2e:ui": "playwright test --ui",
+    "report:build": "node buildreports/collect_logs.mjs"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.74.0",
